Fix alignment of weekly and width

--- a/app/routes/overview/components/Overview.css
+++ b/app/routes/overview/components/Overview.css
@@ -73,8 +73,7 @@
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.04);
   border-radius: 3px;
   overflow-y: auto;
-  height: 480px;
-  flex: 1;
+  height: 489px;
   background: var(--lego-card-color);
 
   @media (--mobile-device) {
@@ -86,7 +85,7 @@
 @media only screen and (max-width: 855px) {
   .weeklyArticles {
     height: auto;
-    max-height: 615px;
+    max-height: 659px;
   }
 }
 
